# Navigator

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
certs/: .gitignore
main/: CMakeLists.txt  hmc5883.c  hmc5883.h  main.c  mpu6050.c  mpu6050.h  navi_mon.c  navi_mon.h  nmea_parser.1c  nmea_parser.1h  process_mesage.c  process_message.h  project_specific.h  ptst.c  ptst.h  vl53l0x.c  vl53l0x.h
