idf_component_register(SRCS "main.c"
							"process_mesage.c"
                        	"../../esp32_common/tcp/ntp_sync.c"
							"../../esp32_common/utils/utils.c"
							"../../esp32_common/utils/ota.c"
							"../../esp32_common/cmds/cmd_wifi.c"
							"../../esp32_common/cmds/cmd_system.c"
							"../../esp32_common/tcp/mqtt_ctrl.c"
							"../../esp32_common/tcp/tcp_log.c"
							"../../esp32_common/tcp/tcp_server.c"
							"../../esp32_common/tcp/ntp_sync.c"
							"../../esp32_common/nmea/nmea_parser.c"
                    INCLUDE_DIRS "."
                    	"../certs"
                    	"../../esp32_common"
    					"../../esp32_common/cmds"
    					"../../esp32_common/tcp"
    					"../../esp32_common/utils"
    					"../../esp32_common/nmea"
						)
