idf_component_register(SRCS "main.c"
							"process_mesage.c"
							"ptst.c"
							"hmc5883.c"
							"mpu6050.c"
							"vl53l0x.c"
							"navi_mon.c"
                        	"../../esp32_common/tcp/ntp_sync.c"
							"../../esp32_common/utils/utils.c"
							"../../esp32_common/utils/ota.c"
							"../../esp32_common/cmds/cmd_wifi.c"
							"../../esp32_common/cmds/cmd_system.c"
							"../../esp32_common/tcp/mqtt_ctrl.c"
							"../../esp32_common/tcp/tcp_log.c"
							"../../esp32_common/tcp/tcp_server.c"
							"../../esp32_common/tcp/ntp_sync.c"
							"../../esp32_common/nmea/nmea_parser.c"
							"../../esp32_common/adesp32/adc_op.c"
							"../../esp32_common/comm/i2ccomm.c"
							"../../esp32_common/filters/kalman.c"
                    INCLUDE_DIRS "."
                    	"../certs"
                    	"../../esp32_common"
    					"../../esp32_common/cmds"
    					"../../esp32_common/tcp"
    					"../../esp32_common/utils"
    					"../../esp32_common/nmea"
    					"../../esp32_common/adesp32"
    					"../../esp32_common/comm"
    					"../../esp32_common/filters"
						)
